--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikewatching</title>
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="map.css">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <!-- Mapbox GL JS CSS-->
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+  <script src="map.js" type="module"></script>
 </head>
 <body>
-  <h1>🚴🏼‍♀️ Bikewatching</h1>
+  <header>
+    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <label>
+      Filter by time:
+      <input type="range" id="time-slider" min="-1" max="1440" value="-1">
+      <time id="selected-time"></time>
+      <em id="any-time">(any time)</em>
+    </label>
+  </header>
+  <div id="map">
+    <svg></svg>
+  </div>
 </body>
 </html>
